--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button>Get One More</button>
     </div>
 <!-- Hidden Part -->
-    <!-- <audio src="./assets/cinematic-inspirational-epic-music-354044.mp3" loop id="ap" autoplay></audio> -->
+    <audio src="./assets/cinematic-inspirational-epic-music-354044.mp3" loop id="ap" autoplay></audio>
     <footer>
         <a href="privacy-policy.html">Privacy Policy</a>
         <a href="terms.html">Terms & Conditions</a>
